--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,28 @@ jobs:
       - name: Install JDK and build project (without Gradle)
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
-          ./mvnw verify -Dnet.bytebuddy.test.ci=true -pl !byte-buddy-gradle-plugin
+          ./mvnw verify -Dnet.bytebuddy.test.ci=true  -Pjava14 -pl !byte-buddy-gradle-plugin
+  hotspot-supported:
+    name: HotSpot (supported)
+    strategy:
+      matrix:
+        os: [ubuntu-18.04, macOS-10.14, windows-2019]
+        java: [8, 11, 13]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+          architecture: x64
+      - name: Build project
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+        if: matrix.java < 13
+      - name: Build project (without Gradle)
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
+        if: matrix.java > 12
   hotspot-unsupported:
     name: HotSpot (unsupported)
     strategy:
@@ -50,6 +71,41 @@ jobs:
           java-version: 1.6
           architecture: x64
       - name: Print version
-        run: java -version
+        run: java -fullversion
       - name: Build project
-        run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava6 -pl !byte-buddy-gradle-plugin
+        run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava6
+  openj9-supported:
+    name: OpenJ9 (supported)
+    strategy:
+      matrix:
+        java: [8, 11, 13]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Install JDK
+        run: . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
+      - name: Build project
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+        if: matrix.java < 13
+      - name: Build project (without Gradle)
+        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
+        if: matrix.java > 12
+  coverage:
+    name: Coverage
+    runs-on: ubuntu-18.04
+    needs: [hotspot-ea, hotspot-supported, hotspot-unsupported, hotspot-legacy, openj9-supported]
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          architecture: x64
+      - name: Build project
+        run: ./mvnw jacoco:prepare-agent verify jacoco:report -Pintegration -Pjava11 -Dnet.bytebuddy.test.ci=true
+      - uses: coverallsapp/github-action@v1.0.1
+        with:
+          github-token: ${{ secrets.github_token }}
