--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
   hotspot-supported:
     name: HotSpot (supported)
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04, macOS-10.14, windows-2019]
         java: [8, 11, 13]
@@ -46,6 +47,7 @@ jobs:
   hotspot-unsupported:
     name: HotSpot (unsupported)
     strategy:
+      fail-fast: false
       matrix:
         java: [7, 9, 10, 12]
     runs-on: ubuntu-18.04
@@ -70,13 +72,12 @@ jobs:
         with:
           java-version: 1.6
           architecture: x64
-      - name: Print version
-        run: java -fullversion
       - name: Build project
         run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava6
   openj9-supported:
     name: OpenJ9 (supported)
     strategy:
+      fail-fast: false
       matrix:
         java: [8, 11, 13]
     runs-on: ubuntu-18.04
@@ -84,13 +85,15 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Install JDK
-        run: . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
-      - name: Build project
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+      - name: Install JDK and build project
+        run: |
+          . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
+          ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
         if: matrix.java < 13
-      - name: Build project (without Gradle)
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
+      - name: Install JDK and build project (without Gradle)
+        run: |
+          . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
+          ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
         if: matrix.java > 12
   coverage:
     name: Coverage
