--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Install JDK and build project (without Gradle)
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
-          ./mvnw verify -Dnet.bytebuddy.test.ci=true  -Pjava14 -pl !byte-buddy-gradle-plugin
+          ./mvnw verify -Pjava14 -pl !byte-buddy-gradle-plugin
+          ./mvnw verify -Pjava14 -pl !byte-buddy-gradle-plugin
   hotspot-supported:
     name: HotSpot (supported)
     strategy:
@@ -39,10 +40,10 @@ jobs:
           java-version: ${{ matrix.java }}
           architecture: x64
       - name: Build project
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
         if: matrix.java < 13
       - name: Build project (without Gradle)
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
         if: matrix.java > 12
   hotspot-unsupported:
     name: HotSpot (unsupported)
@@ -60,7 +61,7 @@ jobs:
           java-version: ${{ matrix.java }}
           architecture: x64
       - name: Build project
-        run: ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   hotspot-legacy:
     name: HotSpot (legacy)
     runs-on: ubuntu-18.04
@@ -73,7 +74,7 @@ jobs:
           java-version: 1.6
           architecture: x64
       - name: Build project
-        run: ./mvnw -s nossl.settings.xml verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava6
+        run: ./mvnw -s nossl.settings.xml verify -Pintegration -Pjava6
   openj9-supported:
     name: OpenJ9 (supported)
     strategy:
@@ -88,12 +89,12 @@ jobs:
       - name: Install JDK and build project
         run: |
           . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
-          ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }}
+          ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
         if: matrix.java < 13
       - name: Install JDK and build project (without Gradle)
         run: |
           . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
-          ./mvnw verify -Dnet.bytebuddy.test.ci=true -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
+          ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
         if: matrix.java > 12
   coverage:
     name: Coverage
@@ -109,4 +110,4 @@ jobs:
           java-version: 8
           architecture: x64
       - name: Build project
-        run: ./mvnw jacoco:prepare-agent verify jacoco:report coveralls:report -DrepoToken=${{ secrets.coveralls }} -Pintegration -Dnet.bytebuddy.test.ci=true
+        run: ./mvnw jacoco:prepare-agent verify jacoco:report coveralls:report -DrepoToken=${{ secrets.coveralls }} -Pintegration
