--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
         <version.utility.findbugs>3.0.1</version.utility.findbugs>
         <spotbugs.skip>false</spotbugs.skip>
         <jacoco.skip>false</jacoco.skip>
+        <repository.url>git@github.com:raphw/byte-buddy.git</repository.url>
     </properties>
 
     <licenses>
@@ -127,9 +128,9 @@
     </issueManagement>
 
     <scm>
-        <connection>scm:git:git@github.com:raphw/byte-buddy.git</connection>
-        <developerConnection>scm:git:git@github.com:raphw/byte-buddy.git</developerConnection>
-        <url>git@github.com:raphw/byte-buddy.git</url>
+        <connection>scm:git:${repository.url}</connection>
+        <developerConnection>scm:git:${repository.url}</developerConnection>
+        <url>${repository.url}</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -723,6 +724,12 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
