Try with always generating source jar since it appears to be empty.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -103,7 +103,7 @@
                         <configuration>
                             <shadedArtifactAttached>false</shadedArtifactAttached>
                             <createDependencyReducedPom>true</createDependencyReducedPom>
-                            <createSourcesJar>${bytebuddy.extras}</createSourcesJar>
+                            <createSourcesJar>true</createSourcesJar>
                             <shadeSourcesContent>true</shadeSourcesContent>
                             <relocations>
                                 <relocation>
