--- a/byte-buddy-gradle-plugin/main.gradle
+++ b/byte-buddy-gradle-plugin/main.gradle
@@ -7,7 +7,7 @@ description = pom.description.text().toString()
 
 // Gradle cannot process all version strings such that JavaVersion.current() fails.
 def raw = System.getProperty("java.version")
-def current;
+def current
 if (!raw.startsWith("1.") && raw.contains(".")) {
     current = JavaVersion.toVersion(raw.substring(0, raw.indexOf('.')))
 } else {
@@ -42,23 +42,6 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile gradleApi()
-    // At this point, it is not given that any artifact from the Maven build can be found in a repository.
-    def location = new File(project.buildscript.sourceFile.getParentFile(), "../byte-buddy/target/byte-buddy-${version}.jar").canonicalFile
-    logger.info("Relying on ${location.absolutePath} as Byte Buddy dependency")
-    if (location.exists()) {
-        compile files(location.absolutePath)
-    } else {
-        logger.warn("${location.absolutePath} does not exist, can clean but not build project")
-    }
-    testCompile gradleTestKit()
-    testCompile group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
-    testCompile(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
-        exclude group: 'net.bytebuddy'
-    }
-}
-
 // Without the extras property, creating a javadoc artifact is not necessary.
 if (Boolean.getBoolean('net.bytebuddy.misc.extras')) {
     task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -80,7 +63,7 @@ task copyLicense(type: Copy) {
     from '..'
     include 'LICENSE', 'NOTICE'
     into "$buildDir/resources/main/META-INF"
-    def pattern = java.util.regex.Pattern.compile('\\$\\{([a-zA-Z0-9\\-._]+)}');
+    def pattern = java.util.regex.Pattern.compile('\\$\\{([a-zA-Z0-9\\-._]+)}')
     filter { String line ->
         def matcher = pattern.matcher(line)
         def buffer = new StringBuffer()
