Rework the Gradle build
This commit reworks how the Gradle plugin is built. Instead of using
different versions of Gradle for the purpose of testing (which doesn't
really work because the plugin doesn't do functional testing but uses
the API jar), the same version of Gradle is used (the latest, 6.0.1).

However, this requires a bit of tweaking:

- Gradle will always be executed with a Java 8 JVM, which requires
to set the `JDK_8` environement variable
- when Maven calls Gradle, it tells what is the target bytecode
version, which is then used by Gradle to determine what JDK to use.
It will, for example, use JDK 7 to compile and execute the tests,
using forking. Again, an environment variable `JDK_7` needs to be
set.

The difficulty of this procedure is that this build is building a
Gradle plugin. As such, it relies on the `gradleApi` jar, which is
a generated jar at runtime. This jar contains more than the API,
as the name doesn't imply, because it also contains the minimal
runtime for testing with TestKit.

However, this plugin does _not_ use TestKit. It just runs tests
and checks against the Gradle API. Ideally, this Gradle API should
be published and reusable, and this plugin should be able to be
built for older Gradle versions. This is what the build tries to
emulate by tweaking the Gradle API jar in order to lower its
bytecode version.

This, however, raises different questions:

- if the plugin is built with Java 8, it is likely to depend on
internal details of the API, making it incompatible with previous
Gradle releases, so what's the point of testing?
- if the plugin is built with a previous format, like it does in
this build, then we can execute it on older Gradle releases (likely),
but then we don't test that it will _also_ work with newer JDKs.

For this, Gradle would make it much easier by allowing you to create
different test suites for the different target JDKs. The fact that the
build is driven by Maven doesn't make it easy, but, let's be honest,
the 

--- a/byte-buddy-gradle-plugin/build.gradle
+++ b/byte-buddy-gradle-plugin/build.gradle
@@ -1,28 +1,84 @@
 plugins {
     id 'java'
     id 'java-gradle-plugin'
+    id 'maven-publish'
+    id 'com.gradle.plugin-publish' version '0.10.1'
 }
 
-def pom = new XmlSlurper().parse(file('./pom.xml'))
-def outerPom = new XmlSlurper().parse(file('../pom.xml'))
+repositories {
+    jcenter()
+}
 
-version = pom.parent.version.text().toString()
+apply from: 'main.gradle'
+
+ext.pom = new XmlSlurper().parse(file('./pom.xml'))
+ext.outerPom = new XmlSlurper().parse(file('../pom.xml'))
+
+allprojects {
+    version = pom.parent.version.text().toString()
+    group = pom.parent.groupId.text().toString()
+    description = pom.description.text().toString()
+}
+
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute module("net.bytebuddy:byte-buddy:${version}") with project(":mavenBridge")
+    }
+}
+
+pluginBundle {
+    website = 'https://bytebuddy.net'
+    vcsUrl = 'https://github.com/raphw/byte-buddy'
+    tags = ['Byte Buddy', 'bytecode', 'enhancement']
+}
+
+gradlePlugin {
+    plugins {
+        byteBuddyPlugin {
+            id = pom.parent.groupId.text().toString() + '.' + pom.artifactId.text().toString()
+            displayName = 'Byte Buddy Gradle plugin'
+            description = pom.description.text().toString()
+            implementationClass = 'net.bytebuddy.build.gradle.ByteBuddyPlugin'
+        }
+    }
+}
+
+// Tests will use a modified Gradle API jar so that we can verify
+// the behavior for older Gradle versions. We should really think
+// if this is the way to go, because the tests do not test against
+// the Gradle runtime, they use the generated API.
+
+configurations {
+    rawGradleApi
+    all {
+        // do not rely on the dependencies added by default by the Java Gradle plugin
+        dependencies.clear()
+    }
+}
 
 dependencies {
-    compile gradleApi()
-    // At this point, it is not given that any artifact from the Maven build can be found in a repository.
-    def location = new File(project.buildscript.sourceFile.getParentFile(), "../byte-buddy/target/byte-buddy-${version}.jar").canonicalFile
-    logger.info("Relying on ${location.absolutePath} as Byte Buddy dependency")
-    if (location.exists()) {
-        compile files(location.absolutePath)
-    } else {
-        logger.warn("${location.absolutePath} does not exist, can clean but not build project")
-    }
-    testCompile gradleTestKit()
-    testCompile group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
-    testCompile(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
+    rawGradleApi gradleApi()
+}
+
+def bytecodeVersion(JavaVersion version) {
+    return 44 + version.majorVersion.toInteger()
+}
+
+def downgradeGradleApi = tasks.create("downgradeGradleApi", DowngradeGradleApi) {
+    gradleApi = files(configurations.rawGradleApi)
+    outputDir = file("${buildDir}/apis")
+    classVersion = bytecodeVersion(targetCompatibility)
+}
+
+tasks.withType(JavaCompile).configureEach {
+    dependsOn(downgradeGradleApi)
+}
+
+dependencies {
+    implementation files(downgradeGradleApi.downgradedJars)
+    implementation "net.bytebuddy:byte-buddy:${version}"
+    testImplementation group: 'junit', name: 'junit', version: outerPom.properties.'version.junit'
+    testImplementation(group: 'org.mockito', name: 'mockito-core', version: outerPom.properties.'version.mockito') {
         exclude group: 'net.bytebuddy'
     }
 }
-
-apply from: './main.gradle'
