--- a/byte-buddy-gradle-plugin/main.gradle
+++ b/byte-buddy-gradle-plugin/main.gradle
@@ -1,5 +1,5 @@
-def pom = new XmlSlurper().parse(file('./pom.xml'))
-def outerPom = new XmlSlurper().parse(file('../pom.xml'))
+ext.pom = new XmlSlurper().parse(file('./pom.xml'))
+ext.outerPom = new XmlSlurper().parse(file('../pom.xml'))
 
 group = pom.parent.groupId.text().toString()
 version = pom.parent.version.text().toString()
@@ -13,6 +13,8 @@ if (!raw.startsWith("1.") && raw.contains(".")) {
 } else {
     current = JavaVersion.toVersion(raw)
 }
+
+ext.legacy = current < JavaVersion.VERSION_1_8
 
 def sourceVersion = System.getProperty("net.bytebuddy.gradle.version.source")
 if (sourceVersion != null) {
