--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,10 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Install JDK and build project (without Gradle)
+      - name: Install JDK and build project
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
-          ./mvnw verify -Pjava14 -pl !byte-buddy-gradle-plugin
-          ./mvnw verify -Pjava14 -pl !byte-buddy-gradle-plugin
+          ./mvnw verify -Pjava14
   hotspot-supported:
     name: HotSpot (supported)
     strategy:
@@ -41,10 +40,6 @@ jobs:
           architecture: x64
       - name: Build project
         run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
-        if: matrix.java < 14
-      - name: Build project (without Gradle)
-        run: ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
-        if: matrix.java > 13
   hotspot-unsupported:
     name: HotSpot (unsupported)
     strategy:
@@ -90,12 +85,6 @@ jobs:
         run: |
           . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
           ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
-        if: matrix.java < 14
-      - name: Install JDK and build project (without Gradle)
-        run: |
-          . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
-          ./mvnw verify -Pintegration -Pjava${{ matrix.java }} -pl !byte-buddy-gradle-plugin
-        if: matrix.java > 13
   coverage:
     name: Coverage
     runs-on: ubuntu-18.04
