--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,7 @@
                         <testSource>${sourcecode.test.version}</testSource>
                         <testTarget>${bytecode.test.version}</testTarget>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <compilerArgument>-Xlint:deprecation</compilerArgument>
                     </configuration>
                 </plugin>
                 <plugin>
