--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,6 @@ jobs:
       fail-fast: false
       matrix:
         java: [8, 11, 13]
-        architecture: [x32, x64]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
@@ -85,7 +84,7 @@ jobs:
           fetch-depth: 1
       - name: Install JDK and build project
         run: |
-          . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=${{ matrix.architecture }}&release=latest&type=jdk&heap_size=normal"
+          . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
           ./mvnw verify -Pintegration -Pjava${{ matrix.java }}
   coverage:
     name: Coverage
