--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,7 @@ jobs:
     name: HotSpot (EA)
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - name: Install JDK and build project
         run: |
           . ./.github/scripts/install-jdk.sh --feature ea --os linux-x64
@@ -33,9 +31,7 @@ jobs:
         architecture: [x32, x64]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
@@ -50,9 +46,7 @@ jobs:
         java: [7, 9, 10, 12]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
@@ -63,9 +57,7 @@ jobs:
     name: HotSpot (legacy)
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: 1.6
@@ -80,9 +72,7 @@ jobs:
         java: [8, 11, 13]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v2
       - name: Install JDK and build project
         run: |
           . ./.github/scripts/install-jdk.sh --url "https://api.adoptopenjdk.net/v2/binary/releases/openjdk${{ matrix.java }}?openjdk_impl=openj9&os=linux&arch=x64&release=latest&type=jdk&heap_size=normal"
@@ -93,7 +83,7 @@ jobs:
     needs: [hotspot-ea, hotspot-supported, hotspot-unsupported, hotspot-legacy, openj9-supported]
     if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: 8
@@ -104,24 +94,17 @@ jobs:
     name: Release new version
     runs-on: ubuntu-18.04
     needs: [coverage]
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && startsWith(github.event.head_commit.message, '[release]')
     steps:
-      - uses: actions/checkout@v1
-        with:
-          ref: master
-      - name: Consider release
-        id: release
-        run: echo "##[set-output name=release;]$(git log --format=%B -n 1 | grep '^\[release\]' | wc -l)"
       - uses: actions/setup-java@v1
-        if: steps.release.outputs.release > 0
         with:
           java-version: 8
           architecture: x64
       - name: Publish new version
-        if: steps.release.outputs.release > 0
         run: |
-          echo "${{ secrets.gpg_secret }}" | gpg --batch --import
           export GPG_TTY=$(tty)
-          git config user.name "Rafael Winterhalter"
-          git config user.email "rafael.wth@gmail.com"
+          echo "${{ secrets.gpg_secret }}" | gpg --batch --import
+          git clone ${{ github.repositoryUrl }} .
+          git config user.name "${{ github.event.head_commit.committer.name }}"
+          git config user.email "${{ github.event.head_commit.committer.email }}"
           ./mvnw -B -s .mvn/release.settings.xml release:prepare release:perform -Drepository.url=https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git -Dbintray.username=raphw -Dbintray.password=${{ secrets.bintray_password }} -Dgpg.passphrase=${{ secrets.gpg_passphrase }} -Dgpg.keyname=B4AC8CDC141AF0AE468D16921DA784CCB5C46DD5 -Dgradle.key=${{ secrets.gradle_key }} -Dgradle.secret=${{ secrets.gradle_secret }}
