--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, macOS-10.15, windows-2019]
-        java: [8, 11, 13]
+        java: [8, 11, 14]
         architecture: [x32, x64]
     runs-on: ${{ matrix.os }}
     steps:
@@ -42,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [7, 9, 10, 12]
+        java: [7, 9, 10, 12, 13]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
